force-app/main/default/objects/Case_Study__c/Case_Study__c.object-meta.xml
<CustomObject>
    <description
  >Portfolio case studies displayed on the Portfolio page</description>
    <label>Case Study</label>
    <nameField>
        <label>Case Study Name</label>
        <type>Text</type>
    </nameField>
    <pluralLabel>Case Studies</pluralLabel>
    <sharingModel>ReadWrite</sharingModel>
</CustomObject>