force-app/main/default/objects/Case_Study__c/fields/Approach__c.field-meta.xml
<CustomField>
    <fullName>Approach__c</fullName>
    <description>The technical approach and solution architecture</description>
    <label>Approach</label>
    <length>32768</length>
    <type>Html</type>
</CustomField>