force-app/main/default/objects/Case_Study__c/fields/Is_Active__c.field-meta.xml
<CustomField>
    <fullName>Is_Active__c</fullName>
    <defaultValue>true</defaultValue>
    <description
  >Controls whether case study is displayed on the Portfolio page</description>
    <label>Is Active</label>
    <type>Checkbox</type>
</CustomField>