force-app/main/default/objects/Case_Study__c/fields/Outcome__c.field-meta.xml
<CustomField>
    <fullName>Outcome__c</fullName>
    <description>The results and business impact achieved</description>
    <label>Outcome</label>
    <length>32768</length>
    <type>Html</type>
</CustomField>