force-app/main/default/objects/Case_Study__c/fields/Problem__c.field-meta.xml
<CustomField>
    <fullName>Problem__c</fullName>
    <description>The business problem or challenge faced</description>
    <label>Problem</label>
    <length>32768</length>
    <type>Html</type>
</CustomField>