force-app/main/default/objects/Case_Study__c/fields/Tags__c.field-meta.xml
<CustomField>
    <fullName>Tags__c</fullName>
    <description>Comma-separated tags for filtering and categorization (e.g., Experience Cloud, Integration, FSC)</description>
    <label>Tags</label>
    <length>255</length>
    <type>Text</type>
</CustomField>